// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A PR from a branch must trigger an appropriate status update 1`] = `
Array [
  Object {
    "owner": "whatwg",
    "repo": "console",
    "sha": "80a564b821732bebe6ea082db7c699389ecf4716",
    "statusField1": "status value 1",
    "statusField2": "status value 2",
  },
]
`;

exports[`A PR from a fork must trigger an appropriate status update 1`] = `
Array [
  Object {
    "owner": "whatwg",
    "repo": "console",
    "sha": "0744fdd6281170d629cee5c6bc26eda1b8ebdb95",
    "statusField1": "status value 1",
    "statusField2": "status value 2",
  },
]
`;
